changed favicon + fixed letter spacing in title

--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,8 @@ h1 a {
   color: black;
   text-decoration: none;
   font-family: "Dancing Script", cursive;
+  letter-spacing: normal;
+  font-weight: 500;
 }
 
 h2 {
